# geoname-sandbox

./: .gitignore  README.md  extract-regions-and-depts.py  pyproject.toml
scripts/: export_towns.py  parse-whole-database.py  parse-zip-codes.py
src/geonames/: main.py
